--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>
     </section>
 
-    <section class="photo-grid">
+    <section class="photo-grid" aria-label="Фотогалерея">
       <ul class="photo-grid">
         <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд"></li>
         <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы"></li>
@@ -139,9 +139,9 @@
           <ul class="footer__links">
             <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
             <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-            <li"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-            <li"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-            <li"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
           </ul>
         </nav>
 
