--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header page__header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Картинка РФ">
       <ul class="header__lang-links">
-        <li><a class="header__lang-link" href="#">Ru</a></li>
+        <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
         <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
@@ -28,11 +28,11 @@
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li> Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li>Часовых поясов&ensp;<span class="intro__nomer">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО&ensp;<span class="intro__nomer">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО&ensp;<span class="intro__nomer">16</span></li>
+        <li> Природных заповедников&ensp;<span class="intro__nomer">105</span></li>
+        <li>Аэропортов&ensp;<span class="intro__nomer">241</span></li>
       </ul>
     </section>
 
