--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
 
       <section class="photo-grid" aria-label="Фотогалерея">
-        <ul class="photo-grid">
+        <ul class="photo-grid__element">
           <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезд"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман"></li>
@@ -144,7 +144,7 @@
             <p class="place__url-heading">URL</p>
             <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </div>
-          <img class="place__image" src="../russian-travel/images/place-karelia.jpg" alt="Водлозеро, фотография.">
+          <img class="place__image" src="./images/place-karelia.jpg" alt="Водлозеро, фотография.">
           <div>
             <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
               лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
